Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ color:black;
       margin: 0px;
       padding: 0px;
       font-family: 'Raleway';
+      
   }
 
   
@@ -48,6 +49,8 @@ color:black;
   .content{
     max-width:1920px;
     margin: 0 auto;
+    width:100%;
+    overflow: hidden;
   }
   
     /*Début Menu CSS*/
@@ -63,7 +66,7 @@ color:black;
         position: relative;
         top: 0;
         border-top: 3px solid white;
-        padding-left: 1%;
+        padding:1%;
     }
   
       /*items menu*/
@@ -135,6 +138,7 @@ color:black;
     flex-direction: column;
     flex-wrap: nowrap;
     padding:1%;
+    width:100%;
  
   }
   
@@ -211,6 +215,7 @@ color:black;
     justify-content:flex-start;
     align-items: center;
     padding:1%;
+    width:100%;
   }
   
   /*Bloc des boutons filtres icones */
@@ -310,6 +315,7 @@ color:black;
     justify-content: flex-start;
     align-items: center;
     padding:1%;
+    width:100%;
   }
 
   /*Texte information*/
@@ -329,8 +335,7 @@ color:black;
     flex-direction: row;
     justify-content: flex-start;
     align-items: stretch;
-
-    padding:1%;
+    padding:0.5%;
   }
   /*début hébergements */
   
@@ -553,7 +558,6 @@ color:black;
       align-items: center;
       width:100%;
       flex-wrap: wrap;
-      padding:1%;
       position: relative;
     }
 
@@ -700,7 +704,6 @@ color:black;
       position:relative;
       top:35%;
     }
-       /*Marges du site web */
 
 /* Footer */
 
@@ -709,17 +712,20 @@ color:black;
       flex-direction: row;
       justify-content: flex-start;
       background-color: #F2F2F2;
+      flex-wrap: wrap;
       padding: 1%;
+      width:100%;
+      
     }
 
     .footer-1, .footer-2, .footer-3{
       display: flex;
       flex-direction: column;
-      margin-right:20%;
+      flex-basis:30%;
     }
 
     .footer-1{
-      margin-left: 1%;
+      padding-left: 1%;
     }
 
     .menu-footer{
